--- a/Develop/style.css
+++ b/Develop/style.css
@@ -28,6 +28,8 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  /* custom alterations */
+
 }
 
 .row {
@@ -40,6 +42,8 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  /* custom alterations */
+
 }
 
 .past {
@@ -63,9 +67,23 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  /* custom alterations */
+
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+/* custom classes */
+.saveBtn:hover {
+  font-size: 20px;
+  transition: all .3s ease-in-out;
+}
+
+.leftright {
+  display: inline;
+  margin-left: 10px;
+  margin-right: 10px;
 }
